--- a/client/src/translation/en.json
+++ b/client/src/translation/en.json
@@ -17,5 +17,6 @@
     "married": "Married",
     "M": "Male",
     "F": "Femal",
-    "Customer details": "Customer details"
+    "Customer details": "Customer details",
+    "contactability": "Contacts"
 }
