--- a/client/src/translation/he.json
+++ b/client/src/translation/he.json
@@ -17,5 +17,6 @@
     "married": "נשוי",
     "M": "זכר",
     "F": "נקבה",
-    "Customer details": "פרטי לקוח"
+    "Customer details": "פרטי לקוח",
+    "contactability": "פרטים"
 }
